# greentic-cards2pack

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SECURITY_FIX_REPORT.md  pr-changed-files.txt  pr-comment.md
.codex/done/: A-PR-01.md
.github/workflows/: ci.yml  codex-security-fix.yml  crates-publish.yml  dev-publish.yml
component-prompt2flow/: Cargo.toml  component.manifest.json
component-prompt2flow/src/: lib.rs
examples/translate-demo/: README.md  glossary.json
examples/translate-demo/cards/: settings.json  welcome.json
examples/translate-demo/expected-output/: en.json
src/: cli.rs  diagnostics.rs  emit_flow.rs  graph.rs  i18n_extract.rs  ir.rs  lib.rs  scan.rs  translate.rs  workspace.rs
src/i18n_extract/: extractor.rs  mod.rs  report.rs
tests/: extract_i18n.rs  flow_emit.rs  generate.rs  support.rs  translate.rs  translate_integration.rs
tests/fixtures/cards/translate/: detail-card.json  form-input.json  welcome.json
tests/fixtures/translate/: glossary.json
tests/gtests/smoke/: 01_generate_pack.gtest  02_generate_with_translate.gtest
