[package]
name = "greentic-cards2pack"
version = "0.4.12"
edition = "2024"
description = "Generate Greentic pack workspaces and archives from Adaptive Cards"
license = "MIT"
repository = "https://github.com/greenticai/greentic-cards2pack"
homepage = "https://github.com/greenticai/greentic-cards2pack"
documentation = "https://docs.rs/greentic-cards2pack"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2"
time = { version = "0.3", features = ["formatting"] }
walkdir = "2"
which = "8"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
