[package]
name = "greentic-cards2pack"
version = "1.1.0-dev.0"
edition = "2024"
description = "Generate Greentic pack workspaces and archives from Adaptive Cards"
license = "MIT"
repository = "https://github.com/greenticai/greentic-cards2pack"
homepage = "https://github.com/greenticai/greentic-cards2pack"
documentation = "https://docs.rs/greentic-cards2pack"
readme = "README.md"

[dependencies]
anyhow = "1"
serde_json = "1"
serde_yaml_bw = "2"
walkdir = "2"
which = "8"

[dependencies.clap]
version = "4"
features = [
    "derive",
]

[dependencies.serde]
version = "1"
features = [
    "derive",
]

[dependencies.time]
version = "0.3"
features = [
    "formatting",
]

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
